# gensite

./: .gitignore  dune-project  gensite.opam
.github/workflows/: deploy.yml
lib/: dune
site_src/flashs/: ctrlp_in_ctrlp_to_select_up.md  ghostty_tmux_peco_error.md  lighttpd_mod_openssl_not_found.md
site_src/~me/: index.html
test/: dune
